// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate file should fail; invalid javascript 1`] = `
Array [
  "Failed to parse component (javascript) file",
]
`;

exports[`Validate file should fail; invalid namespace 1`] = `
Array [
  "Expected: '{namespace'",
]
`;

exports[`Validate file should fail; missing import 1`] = `
Array [
  "It looks like the following component calls are missing an [33mimport[39m:

[31mMyExternalComponent[39m",
]
`;

exports[`Validate file should fail; missing internal 1`] = `
Array [
  "Based on their name, these attributes should have the [33m.internal()[39m config added:

[31mcount_[39m",
]
`;

exports[`Validate file should fail; missing params 1`] = `
Array [
  "These params can't be found in [33mSTATE[39m or your [33mClass[39m:

[31moptionalInfo[39m",
]
`;

exports[`Validate file should fail; missing render 1`] = `
Array [
  "Cannot find a [33m.render[39m template, do you have a typo?

[31mrander[39m",
]
`;

exports[`Validate file should fail; missing required 1`] = `
Array [
  "These attributes are [33mrequired[39m in your Soy Template but not in your Component:

[31mtitle[39m",
  "These attributes are [33m.required()[39m in your Component but not in your Template:

[31mdescription[39m",
]
`;

exports[`Validate file should fail; noop events 1`] = `
Array [
  "These calls are not components, so their [33mevents[39m param will do nothing:

[31mOtherComponent.Helper[39m",
]
`;

exports[`Validate file should fail; sorted map keys 1`] = `
Array [
  "These [33mmap keys[39m should be [33msorted[39m:

[31mLines 10 to 12[39m
[31mLines 18 to 20[39m",
]
`;

exports[`Validate file should fail; sorted map keys 2`] = `
Array [
  "Use the [33mElvis (?:)[39m operator instead of a ternary for [33mdefault[39m values:

[31m$optionalInfo - Line 20[39m",
]
`;

exports[`Validate file should fail; sorted param declarations 1`] = `
Array [
  "These templates need their [33mparam[39m declarations [33msorted[39m:

[31m.render[39m",
]
`;

exports[`Validate file should fail; sorted params 1`] = `
Array [
  "Please [33msort[39m the params in these [33mcalls[39m:

[31mOtherComponent.render - Lines 8 to 11[39m",
]
`;
